# awen

./: .gitignore  PHASE-2.2-DELIVERY-MANIFEST.txt  PHASE-2.3-CHECKPOINT.txt  PHASE-2.3-DELIVERY-MANIFEST.txt  PHASE-2.3-FINAL-SIGN-OFF.txt  PHASE-2.4-CHECKPOINT.txt  PHASE-2.4-DELIVERY-MANIFEST.txt  PHASE-2.4-FINAL-SIGN-OFF.txt  PHASE-2.4-README.md  PHASE-2.5-CHECKPOINT.txt  PHASE-2.5-DELIVERY-INDEX.md  PHASE-2.5-DELIVERY-MANIFEST.txt  PHASE-2.5-FINAL-SIGN-OFF.txt  PHASE-2.5-FINAL-VERIFICATION.txt  PHASE-2.5-FINAL-VERIFIED.txt  PHASE-2.5-SESSION-SUMMARY.md  PHASE-2.5-STATUS.txt  PHASE-2.6-CHECKPOINT.txt  PHASE-2.6-SESSION-SUMMARY.md  PHASE-2.6-SPECIFICATION.md  README.md  SESSION-2026-01-05-SUMMARY.md
awen-runtime/: CODEOWNERS  Cargo.toml  LICENSE  README.md  example_ir.json  libcontrol_v0.rlib
awen-runtime/awen_run_0225f8a3-1c72-4482-843a-9daa681ad300/: timeline.json  traces.jsonl
awen-runtime/awen_run_02b8faf5-470e-4560-818a-d66cc8d22b8f/: timeline.json  traces.jsonl
awen-runtime/awen_run_05c50d0c-e3a0-43f1-b432-b270b19e4047/: timeline.json  traces.jsonl
awen-runtime/awen_run_0a7ad344-9cd2-4c37-9ccf-2dcbcee1682d/: timeline.json  traces.jsonl
awen-runtime/awen_run_0c10c5fe-cdf6-4cf1-83c1-aa20384e6d79/: timeline.json  traces.jsonl
awen-runtime/awen_run_0e22b7aa-6005-4cb0-8ea4-2d1734983cf2/: timeline.json  traces.jsonl
awen-runtime/awen_run_142e3d7e-296e-46e9-86f1-101a4043b38e/: timeline.json  traces.jsonl
awen-runtime/awen_run_158b5c23-fcbf-48d2-91d8-239d431e388f/: timeline.json  traces.jsonl
awen-runtime/awen_run_18621b44-07e0-41ca-a317-d78d27dbeed8/: timeline.json  trace.json  traces.jsonl
awen-runtime/awen_run_19f45824-fb4d-4044-9281-a02dca568bcd/: timeline.json  traces.jsonl
awen-runtime/awen_run_19f90fe5-95b8-485c-9557-deb6d45975d5/: timeline.json  traces.jsonl
awen-runtime/cli/: awenctl.rs
(+339 files in other folders)
