[package]
name = "awen_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
jsonschema = "0.16"

# Artifact storage and reproducibility (Phase 2.6)
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.4"
num_cpus = "1.16"

ed25519-dalek = "1.0"
base64 = "0.21"

# Core dependencies
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
once_cell = "1.20"

[dev-dependencies]
trybuild = "1.0"
tempfile = "3.8"
